<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FF9800">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="330dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="49dp"
        android:background="#00BCD4"
        android:text="CALCULADORAMAX"
        android:textSize="36sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="58dp"
        android:text="Siguiente" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="364dp"
        android:layout_height="324dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="205dp"
        app:srcCompat="@drawable/iconocalculadora" />

</RelativeLayout>
