...
      android:layout_marginStart="59dp"
      android:layout_marginEnd="264dp"
      android:layout_marginBottom="71dp"
      android:text="Atrás" />

  <Button
      android:id="@+id/buttonNext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="262dp"
...
